Fixes #379 - Additional settings dropdown not showing in narrow browsers

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,6 @@ p {
   margin: 0; padding: 0;
   list-style: none;
   float: left;
-  width: 960px;
 }
 
 #menu li {
